--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         <header>
+            <h1>Hello World!</h1>
             <div></div>
             <nav></nav>
         </header>
