--- a/index.html
+++ b/index.html
@@ -7,18 +7,55 @@
     <meta keywords="template, test">
 </head>
 <body>
-    <div>
-        <header>
-            <h1>Hello World!</h1>
-            <div></div>
-            <nav></nav>
+    <div class="page">
+        <header class="header">
+            <div class="header-container">
+                <h1>Surname Name</h1>
+            </div>
         </header>
-        <main>
-            <section>Пример</section>
-            <section></section>
+        <main class="content">
+            <div class="content-container">
+                <section class="image">
+                    <div class="image-container">
+                        <img src="img/icon.png" alt="" style="width: 200px;">
+                    </div>
+                <nav class="menu">
+                    <ul>
+                        <li><a href="">Brief</a></li>
+                        <li><a href="">Bio</a></li>
+                        <li><a href="">Activity</a></li>
+                        <li><a href="">Links</a></li>
+                    </ul>
+                </nav>
+                </section>
+                <section class="brief">
+                    <h2 id="brief" class="sectionText">Brief</h2>
+                    <p class="mainText">asdasd</p>
+
+                </section>
+                <section class="bio">
+                    <h2 id="bio" class="sectionText">Bio</h2>
+                    <p class="mainText">asdsadasdsadsa</p>
+                </section>
+                <section class="activity">
+                    <h2 id="activity" class="sectionText">Activity</h2>
+                    <p class="mainText">asdsadasdsa</p>
+                </section>
+                <section class="links">
+                    <h2 id="links" class="sectionText">Links</h2>
+                    <ul>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                        <li><a href="">Link</a></li>
+                    </ul>
+                </section>
+            </div>
+
         </main>
-        <footer>
-            <div></div>
+        <footer class="footer">
+            <div class="footer-container">
+                <p class="copyright">Copyright</p>
+            </div>
         </footer>
     </div>
 </body>
