--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <title>About Sabaton</title>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
     <meta description="template code">
     <meta keywords="template, test">
 </head>
-<body style="background-image: linear-gradient(black 5%, darkgrey 85%, darkorange);">
+<body>
     <div class="page">
         <header class="header">
             <div class="header-container">
-                <h1 style="color: grey;">Sabaton</h1>
+                <h1 class="sectionText">Sabaton</h1>
             </div>
         </header>
         <main class="content">
             <div class="content-container">
                 <section class="image">
                     <div class="image-container">
-                        <img src="img/icon.jpg" alt="" style="width: 400px;">
+                        <img src="img/icon.jpg" alt="">
                     </div>
                 <nav class="menu">
                     <ul>
