--- a/index.html
+++ b/index.html
@@ -3,68 +3,41 @@
 <head>
     <title>About Sabaton</title>
     <meta charset="utf-8">
-    <meta description="template code">
-    <meta keywords="template, test">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="background-image: linear-gradient(black 5%, darkgrey 85%, darkorange);">
-    <div class="page">
-        <header class="header">
-            <div class="header-container">
-                <h1 style="color: grey;">Sabaton</h1>
-            </div>
-        </header>
-        <main class="content">
-            <div class="content-container">
-                <section class="image">
-                    <div class="image-container">
-                        <img src="img/icon.jpg" alt="" style="width: 400px;">
-                    </div>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#brief">Brief</a></li>
-                        <li><a href="#bio">Rise up of a Sabaton</a></li>
-                        <li><a href="#activity">Other interesting stuff</a></li>
-                        <li><a href="#links">Links</a></li>
-                    </ul>
-                </nav>
-                </section>
-                <section class="brief">
-                    <h2 id="brief" class="sectionText">Brief</h2>
-                    <p class="mainText">Sabaton is a Swedish heavy metal band from Falun. Most of their nine albums are written about war. Their latest album The Great War (2019) reached number 1 on Swedish and German music charts. Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.[1] They are one of the most successful rock bands in Swedish history, and their album Carolus Rex is the best-selling Swedish heavy metal album of all time.</p>
-
-                </section>
-                <section class="bio">
-                    <h2 id="bio" class="sectionText">Rise up of a Sabaton</h2>
-                    <p class="mainText">The band released in March 2005 an "Primo Victoria" their second album. Joakim Broden, lead vocals of the band, said "that album kicked off". The band has amassed a loyal army of European followers -- they have their own annual festival and cruise -- and released a slew of acclaimed albums. The band became increasingly successful across Europe, as witnessed on 2011's live album, World War Live: Battle of the Baltic Sea, featuring a dozen tracks and ten different countries. The following year's Carolus Rex hit number one in Sweden and Poland.</p>
-                </section>
-                <section class="activity">
-                    <h2 id="activity" class="sectionText">Other interesting stuff</h2>
-                    <p class="mainText">Sabaton's music is quite popular on Youtube. They have own channel with more than 1 mil subscribers.<br><br>
-
-                    Sabaton own a two tanks. They're name are Audie and Walther. Tanks named after two heroes: Audie Murphy and Walther Wenck.<br><br>
-
-                    The band don't recognize itself as a "power metal band" because they lack high pitched vocal and fantasy lyrics.<br><br>
-
-                    The word "sabaton" is part of a knight's body armor that covers the foot.<br><br>
-
-                    Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.</p>
-                </section>
-                <section class="links">
-                    <h2 id="links" class="sectionText">Links</h2>
-                    <ul>
-                        <li><a href="https://www.sabaton.net/">Sabaton official site</a></li>
-                        <li><a href="https://www.youtube.com/user/Sabaton">Sabaton Youtube channel</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Sabaton_(band)">Sabaton page on Wikipedia</a></li>
-                    </ul>
-                </section>
-            </div>
-
-        </main>
-        <footer class="footer">
-            <div class="footer-container">
-                <p class="copyright">Copyright</p>
-            </div>
-        </footer>
+<body>
+    <div class="head"></div>
+    <div class="name">Joakim Brodén</div>
+    <div class="Rectangle1"></div>
+    <div class="Rectangle2"></div>
+    <div id="bio" class="Biography">Biography</div>
+    <div class="Rectangle3"></div>
+    <div class="Rectangle4"></div>
+    <div id="rise" class="rise">The rise</div>
+    <div id="fall" class="fall">The band Sabaton</div>
+    <div class="text1">Joakim "Jocke" Brodén (born 5 October 1980) is a Swedish-Czech musician and songwriter who is the lead vocalist, keyboardist, and occasional third guitarist of the Swedish heavy metal band Sabaton. He and bassist Pär Sundström formed the band in 1999.
+        Brodén's father, Ulf Olof Brodén, is from Sweden and his mother, Anna, is from former Czechoslovakia. He holds dual citizenship in Sweden and the Czech Republic. He has said that he became a metalhead when he was three or four years old because of the music video for Twisted Sister's "We're Not Gonna Take It". He was a competitive swimmer in his youth.
     </div>
+    <div class="text2">Brodén once joined Stormwind for a tour as a keyboard player. Brodén founded Sabaton in 1999 with bassist Pär Sundström; he is the lead vocalist and keyboardist and an occasional third guitarist. He is also the one who came up with the name "Sabaton" for the band.
+Brodén is known for wearing an unusual vest with metal plates when performing with Sabaton;it has been described as resembling a bulletproof vest. He is also known for his distinctive mohawk hairstyle and "squared" facial hair. He is a baritone.
+</div>
+    <div class="text3">Sabaton is a Swedish heavy metal band from Falun. Most of their 10 albums are written about war. Their latest album The Great War (2019) reached number 1 on Swedish and German music charts. Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.[1] They are one of the most successful rock bands in Swedish history, with their album Carolus Rex being the best-selling Swedish heavy metal album of all time.</div>
+    <div class="Rectangle5"></div>
+    <div id="links" class="Links">Links</div>
+    <div class="iokimlinks">
+        <a href="https://twitter.com/joakimbroden?lang=en">Joakim Brodén - Twitter</a><br>
+        <a href="https://www.facebook.com/joakimsabaton">Joakim Brodén - Facebook(Meta)</a><br>
+        <a href="https://www.instagram.com/joakimbroden/?hl=en">Joakim Brodén - Instagram</a>
+    </div>
+    <div class="Rectangle6"></div>
+    <div class="Copyright">Copyright</div>
+    <nav class="Title">
+        <ul>
+            <li><a href="#bio">Biography</a></li>
+            <li><a href="#rise">The rise</a></li>
+            <li><a href="#fall">The band Sabaton</a></li>
+            <li><a href="#links">Links</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
