--- a/index.html
+++ b/index.html
@@ -1,43 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Sabaton</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
+	<meta charset="UTF-8">
+	<title>Rotate Earth</title>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="head"></div>
-    <div class="name">Joakim Brodén</div>
-    <div class="Rectangle1"></div>
-    <div class="Rectangle2"></div>
-    <div id="bio" class="Biography">Biography</div>
-    <div class="Rectangle3"></div>
-    <div class="Rectangle4"></div>
-    <div id="rise" class="rise">The rise</div>
-    <div id="fall" class="fall">The band Sabaton</div>
-    <div class="text1">Joakim "Jocke" Brodén (born 5 October 1980) is a Swedish-Czech musician and songwriter who is the lead vocalist, keyboardist, and occasional third guitarist of the Swedish heavy metal band Sabaton. He and bassist Pär Sundström formed the band in 1999.
-        Brodén's father, Ulf Olof Brodén, is from Sweden and his mother, Anna, is from former Czechoslovakia. He holds dual citizenship in Sweden and the Czech Republic. He has said that he became a metalhead when he was three or four years old because of the music video for Twisted Sister's "We're Not Gonna Take It". He was a competitive swimmer in his youth.
-    </div>
-    <div class="text2">Brodén once joined Stormwind for a tour as a keyboard player. Brodén founded Sabaton in 1999 with bassist Pär Sundström; he is the lead vocalist and keyboardist and an occasional third guitarist. He is also the one who came up with the name "Sabaton" for the band.
-Brodén is known for wearing an unusual vest with metal plates when performing with Sabaton;it has been described as resembling a bulletproof vest. He is also known for his distinctive mohawk hairstyle and "squared" facial hair. He is a baritone.
-</div>
-    <div class="text3">Sabaton is a Swedish heavy metal band from Falun. Most of their 10 albums are written about war. Their latest album The Great War (2019) reached number 1 on Swedish and German music charts. Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.[1] They are one of the most successful rock bands in Swedish history, with their album Carolus Rex being the best-selling Swedish heavy metal album of all time.</div>
-    <div class="Rectangle5"></div>
-    <div id="links" class="Links">Links</div>
-    <div class="iokimlinks">
-        <a href="https://twitter.com/joakimbroden?lang=en">Joakim Brodén - Twitter</a><br>
-        <a href="https://www.facebook.com/joakimsabaton">Joakim Brodén - Facebook(Meta)</a><br>
-        <a href="https://www.instagram.com/joakimbroden/?hl=en">Joakim Brodén - Instagram</a>
-    </div>
-    <div class="Rectangle6"></div>
-    <div class="Copyright">Copyright</div>
-    <nav class="Title">
-        <ul>
-            <li><a href="#bio">Biography</a></li>
-            <li><a href="#rise">The rise</a></li>
-            <li><a href="#fall">The band Sabaton</a></li>
-            <li><a href="#links">Links</a></li>
-        </ul>
-    </nav>
+	<div class="page">
+		<div class="sun"></div>
+		<div class="earth"></div>
+	</div>
 </body>
 </html>
