--- a/index.html
+++ b/index.html
@@ -1,70 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About Sabaton</title>
-    <meta charset="utf-8">
-    <meta description="template code">
-    <meta keywords="template, test">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/header.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/mobile.css">
+	<title>Посылка</title>
 </head>
-<body style="background-image: linear-gradient(black 5%, darkgrey 85%, darkorange);">
-    <div class="page">
-        <header class="header">
-            <div class="header-container">
-                <h1 style="color: grey;">Sabaton</h1>
-            </div>
-        </header>
-        <main class="content">
-            <div class="content-container">
-                <section class="image">
-                    <div class="image-container">
-                        <img src="img/icon.jpg" alt="" style="width: 400px;">
-                    </div>
-                <nav class="menu">
-                    <ul>
-                        <li><a href="#brief">Brief</a></li>
-                        <li><a href="#bio">Rise up of a Sabaton</a></li>
-                        <li><a href="#activity">Other interesting stuff</a></li>
-                        <li><a href="#links">Links</a></li>
-                    </ul>
-                </nav>
-                </section>
-                <section class="brief">
-                    <h2 id="brief" class="sectionText">Brief</h2>
-                    <p class="mainText">Sabaton is a Swedish heavy metal band from Falun. Most of their nine albums are written about war. Their latest album The Great War (2019) reached number 1 on Swedish and German music charts. Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.[1] They are one of the most successful rock bands in Swedish history, and their album Carolus Rex is the best-selling Swedish heavy metal album of all time.</p>
+<body class="coolcursor">
+	<div class="page">
+		<header>
+			<nav>
+				<a href="#package">Посылки</a>
+				<a href="#box">Упаковка</a>
+				<a href="#subs">Подписка</a>
+			</nav>
+			<div>
+				<a href="#menu">Меню</a>
+			</div>
+		</header>
 
-                </section>
-                <section class="bio">
-                    <h2 id="bio" class="sectionText">Rise up of a Sabaton</h2>
-                    <p class="mainText">The band released in March 2005 an "Primo Victoria" their second album. Joakim Broden, lead vocals of the band, said "that album kicked off". The band has amassed a loyal army of European followers -- they have their own annual festival and cruise -- and released a slew of acclaimed albums. The band became increasingly successful across Europe, as witnessed on 2011's live album, World War Live: Battle of the Baltic Sea, featuring a dozen tracks and ten different countries. The following year's Carolus Rex hit number one in Sweden and Poland.</p>
-                </section>
-                <section class="activity">
-                    <h2 id="activity" class="sectionText">Other interesting stuff</h2>
-                    <p class="mainText">Sabaton's music is quite popular on Youtube. They have own channel with more than 1 mil subscribers.<br><br>
+		<main>
+			<form method="get">
+				<div class="mainform">
+					<label for="name">Имя</label><br>
+					<input type="text" class="inp" id="name" name="name" autocomplete="off">
+					<br>
 
-                    Sabaton own a two tanks. They're name are Audie and Walther. Tanks named after two heroes: Audie Murphy and Walther Wenck.<br><br>
+					<label for="city">Город</label><br>
+					<input type="text" class="inp" id="city" name="city" autocomplete="off">
+					<br>
+					
+					<label for="pack">Посылка</label><br>
+					<input type="text" class="inp" id="pack" name="pack" autocomplete="off">
+					<br>
 
-                    The band don't recognize itself as a "power metal band" because they lack high pitched vocal and fantasy lyrics.<br><br>
+					<label for="email">Email</label><br>
+					<input type="text" class="inp" id="email" name="email" autocomplete="off">
+				</div>
+				<button type="submit">Отправить</button>
+			</form>
+		</main>
 
-                    The word "sabaton" is part of a knight's body armor that covers the foot.<br><br>
-
-                    Sabaton has been referred to as one of the "big four" power metal bands, along with Helloween, Blind Guardian and DragonForce.</p>
-                </section>
-                <section class="links">
-                    <h2 id="links" class="sectionText">Links</h2>
-                    <ul>
-                        <li><a href="https://www.sabaton.net/">Sabaton official site</a></li>
-                        <li><a href="https://www.youtube.com/user/Sabaton">Sabaton Youtube channel</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Sabaton_(band)">Sabaton page on Wikipedia</a></li>
-                    </ul>
-                </section>
-            </div>
-
-        </main>
-        <footer class="footer">
-            <div class="footer-container">
-                <p class="copyright">Copyright</p>
-            </div>
-        </footer>
-    </div>
+		<footer>
+			<div class="info">
+				<p>Ваша посылка уже в пути!</p>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
